--- a/.github/workflows/cmake.yaml
+++ b/.github/workflows/cmake.yaml
@@ -21,13 +21,14 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: 'recursive'
-    - uses: actions/upload-artifact@v2
-      with:
-        name: Stretcher-binaries
-        path: /home/runner/work/Stretcher/Stretcher/build/bin
 
     - name: deps
-      run: sudo apt-get install libgl1-mesa-dev libx11-dev libsndfile1-dev librubberband-dev
+      run: sudo apt-get install \
+        libgl1-mesa-dev \
+        libx11-dev \
+        libsndfile1-dev \
+        librubberband-dev \
+        libjack-jackd2-dev
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
@@ -37,5 +38,15 @@ jobs:
     - name: Build
       # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+    
+    - name: Display built files
+      shell: bash
+      working-directory: ${{github.workspace}}/build/bin
+      run: ls -lFR
+    - uses: actions/upload-artifact@v2
+      with:
+        name: Linux artifacts
+        path: ${{runner.workspace}}/build/bin/
+    
 
       
