--- a/.github/workflows/cmake.yaml
+++ b/.github/workflows/cmake.yaml
@@ -43,8 +43,8 @@ jobs:
     - name: Display built files
       shell: bash
       working-directory: ${{github.workspace}}/build/bin
-      run: 
-        pwd,
+      run: |
+        pwd
         ls -lFR
     - uses: actions/upload-artifact@v2
       with:
